用模版方法设计模式重构代码沙箱