@@ -1,100 +1,95 @@
 package com.jarvlis.jarojcodesandbox;
 
 import cn.hutool.core.io.FileUtil;
-import cn.hutool.core.io.resource.ResourceUtil;
 import cn.hutool.core.util.StrUtil;
-import cn.hutool.dfa.FoundWord;
-import cn.hutool.dfa.WordTree;
 import com.jarvlis.jarojcodesandbox.model.ExecuteCodeRequest;
 import com.jarvlis.jarojcodesandbox.model.ExecuteCodeResponse;
 import com.jarvlis.jarojcodesandbox.model.ExecuteMessage;
 import com.jarvlis.jarojcodesandbox.model.JudgeInfo;
-import com.jarvlis.jarojcodesandbox.security.DefaultSecurityManager;
 import com.jarvlis.jarojcodesandbox.utils.ProcessUtil;
-import org.springframework.core.io.support.PropertySourceFactory;
+import lombok.extern.slf4j.Slf4j;
 
 import java.io.File;
-import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
-public class JavaNativeCodeSandBox implements CodeSandBox {
+@Slf4j
+public class JavaCodeSandboxTemplate implements CodeSandBox {
 
     private static final String GLOBAL_CODE_DIR_NAME = "tmpCode";
     private static final String GLOBAL_JAVA_CLASS_NAME = "Main.java";
     private static final long TIME_OUT = 5000L;
-    private static final String SECURITY_MANAGER_PATH = "D:\\Files\\public\\课程文件\\计算机学习\\C计算机基础\\计算机网络\\课设\\Project\\ChatRoom\\jaroj-code-sandbox\\src\\main\\resources\\security" ;
-    private static final String SECURITY_MANAGER_CLASS_NAME = "MySecurityManager";
-    private static final List<String> blackList = Arrays.asList("Files", "exec");
 
-    private static final WordTree WORD_TREE;
+    // 全局代码存放路径
+    private static String globalCodePathName;
+
+    // 用户代码文件夹路径
+    private static String userCodeParentPath;
+    // 用户代码路径
+    private static String userCodePath;
 
     static {
-        // 初始化字典树
-        WORD_TREE = new WordTree();
-        WORD_TREE.addWords(blackList);
-    }
-
-    public static void main(String[] args) {
-        JavaNativeCodeSandBox javaNativeCodeSandBox = new JavaNativeCodeSandBox();
-        ExecuteCodeRequest executeCodeRequest = new ExecuteCodeRequest();
-        executeCodeRequest.setInputLists(Arrays.asList("1 2", "12 23"));
-        String code = ResourceUtil.readStr("testCode/simpleComputeArgs/Main.java", StandardCharsets.UTF_8);
-        executeCodeRequest.setCode(code);
-        executeCodeRequest.setLanguage("java");
-        ExecuteCodeResponse executeCodeResponse = javaNativeCodeSandBox.executeCode(executeCodeRequest);
-        System.out.println(executeCodeResponse);
-    }
-
-    @Override
-    public ExecuteCodeResponse executeCode(ExecuteCodeRequest executeRequest) {
-        // 设置安全策略管理器
-//        System.setSecurityManager(new DefaultSecurityManager());
-        List<String> inputLists = executeRequest.getInputLists();
-        String code = executeRequest.getCode();
-        String language = executeRequest.getLanguage();
-
-        // 校验黑名单
-//        FoundWord foundWord = WORD_TREE.matchWord(code);
-//        if (foundWord != null) {
-//            System.out.println("包含敏感词: " + foundWord.getFoundWord());
-//            return null;
-//        }
-
         String userDir = System.getProperty("user.dir");
-        String globalCodePathName = userDir + File.separator + GLOBAL_CODE_DIR_NAME;
+        globalCodePathName = userDir + File.separator + GLOBAL_CODE_DIR_NAME;
+        userCodeParentPath = globalCodePathName + File.separator + UUID.randomUUID();
+        userCodePath = userCodeParentPath + File.separator + GLOBAL_JAVA_CLASS_NAME;
+    }
+
+    /**
+     * 1.把用户代码保存为文件
+     *
+     * @param code 用户代码
+     * @return
+     */
+    public File saveCodeToFile(String code) {
         if (!FileUtil.exist(globalCodePathName)) {
             FileUtil.mkdir(globalCodePathName);
         }
-
         // 把用户的代码隔离存放
-        String userCodeParentPath = globalCodePathName + File.separator + UUID.randomUUID();
-        String userCodePath = userCodeParentPath + File.separator + GLOBAL_JAVA_CLASS_NAME;
         File userCodeFile = FileUtil.writeString(code, userCodePath, StandardCharsets.UTF_8);
+        return userCodeFile;
+    }
 
-        // 编译代码, 得到class 文件
+    /**
+     * 2.编译代码, 得到 class 文件
+     *
+     * @param userCodeFile 用户代码文件
+     * @return
+     */
+    public ExecuteMessage compileCode(File userCodeFile) {
         String compileCmd = String.format("javac -encoding utf-8 %s", userCodeFile.getAbsoluteFile());
         try {
             Process process = Runtime.getRuntime().exec(compileCmd);
             ExecuteMessage executeMessage = ProcessUtil.runProcessAndGetMsg(process, "编译");
-            System.out.println(executeMessage);
-        } catch (IOException | InterruptedException e) {
-            return getErrorResponse(e);
+            if (executeMessage.getExitValue() != 0) {
+                throw new RuntimeException("编译错误");
+            }
+            return executeMessage;
+        } catch (Exception e) {
+//            return getErrorResponse(e);
+            throw new RuntimeException(e);
         }
+    }
 
-        // 3. 执行代码，得到输出结果
+    /**
+     * 3. 执行代码，得到输出结果
+     *
+     * @param userCodeFile 用户代码文件
+     * @param inputLists   输入参数列表
+     * @return
+     */
+    public List<ExecuteMessage> runCode(File userCodeFile, List<String> inputLists) {
         List<ExecuteMessage> executeMessageList = new ArrayList<>();
-        for (String inputArgs: inputLists) {
-            String runCmd =  String.format("java -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=%s Main", userCodeParentPath, SECURITY_MANAGER_PATH, SECURITY_MANAGER_CLASS_NAME, inputArgs);
+        for (String inputArgs : inputLists) {
+            String runCmd = String.format("java -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
             try {
                 Process runProcess = Runtime.getRuntime().exec(runCmd);
-                new Thread(()->{
+                new Thread(() -> {
                     try {
                         Thread.sleep(TIME_OUT);
-                        System.out.println("超时了");
+//                        System.out.println("超时了");
                         runProcess.destroy();
                     } catch (InterruptedException e) {
                         throw new RuntimeException(e);
@@ -102,17 +97,26 @@ public class JavaNativeCodeSandBox implements CodeSandBox {
                 }).start();
                 ExecuteMessage executeMessage = ProcessUtil.runProcessAndGetMsg(runProcess, "运行");
                 System.out.println(executeMessage);
-            } catch (IOException | InterruptedException e) {
-                return getErrorResponse(e);
+                executeMessageList.add(executeMessage);
+            } catch (Exception e) {
+                throw new RuntimeException("程序执行异常:" + e);
             }
         }
+        return executeMessageList;
+    }
 
-        // 4. 收集整理输出结果
+    /**
+     * 4.收集整理输出结果
+     *
+     * @param executeMessageList
+     * @return
+     */
+    public ExecuteCodeResponse getOutputResponse(List<ExecuteMessage> executeMessageList) {
         ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
         List<String> outputList = new ArrayList<>();
         // 取用时最大值，便于判断是否超时
         long maxTime = 0;
-        for (ExecuteMessage executeMessage: executeMessageList) {
+        for (ExecuteMessage executeMessage : executeMessageList) {
             String errorMessage = executeMessage.getErrorMessage();
             if (StrUtil.isNotEmpty(executeMessage.getErrorMessage())) {
                 executeCodeResponse.setMessage(errorMessage);
@@ -135,20 +139,51 @@ public class JavaNativeCodeSandBox implements CodeSandBox {
 
         executeCodeResponse.setJudgeInfo(judgeInfo);
         // 设置内存消耗信息
-//        judgeInfo.setMemory();
-
-
-        // 5. 文件清理
-        if (userCodeFile.getParentFile() != null) {
-            boolean del = FileUtil.del(userCodeParentPath);
-            System.out.println("删除" + (del ? "成功" : "失败"));
-        }
-
+        judgeInfo.setMemory(0L);
         return executeCodeResponse;
     }
 
+    public boolean clearFile(File userCodeFile) {
+        if (userCodeFile.getParentFile() != null) {
+            boolean del = FileUtil.del(userCodeParentPath);
+            System.out.println("删除" + (del ? "成功" : "失败"));
+            return del;
+        }
+        return true;
+    }
+
+    @Override
+    public ExecuteCodeResponse executeCode(ExecuteCodeRequest executeRequest) {
+
+        List<String> inputLists = executeRequest.getInputLists();
+        String code = executeRequest.getCode();
+        String language = executeRequest.getLanguage();
+
+        // 1.把用户代码保存为文件
+        File userCodeFile = saveCodeToFile(code);
+
+        // 2.编译代码, 得到class 文件
+        ExecuteMessage executeMessage = compileCode(userCodeFile);
+        System.out.println(executeMessage);
+
+        // 3.执行代码，得到输出结果
+        List<ExecuteMessage> executeMessageList = runCode(userCodeFile, inputLists);
+
+        // 4. 收集整理输出结果
+        ExecuteCodeResponse outputResponse = getOutputResponse(executeMessageList);
+
+        // 5. 文件清理
+        boolean res = clearFile(userCodeFile);
+        if (!res) {
+            log.error("delete file error, userCodeFilePath: " + userCodeFile.getAbsolutePath());
+        }
+
+        return outputResponse;
+    }
+
     /**
-     * 获取错误响应
+     * 6.获取错误响应
+     *
      * @param e
      * @return
      */
